<resources>
    <string name="app_name">Sensor Logger</string>
    <string name="title_logger">Logger</string>
    <string name="title_recordings">Recordings</string>
    <string name="title_about">About</string>
    <string name="btn_sensor_details">Details</string>
    <string name="btn_record">Record</string>

    <string name="about_name">Fahris Mumtaza Ahsan</string>
    <string name="about_nim">23/525965/PTK/15407</string>
    <string name="about_description">Aplikasi ini dikembangkan dalam rangka tugas mata kuliah TIF227116 - Pengembangan Aplikasi Peranti Bergerak Lanjut</string>
    <string name="about_institution">Department of Electrical and Information Engineering\n Universitas Gadjah Mada</string>
    <string name="about_year">2024</string>

    <string name="permission_rationale_location">Access to the location service is required.</string>
    <string name="location_permission_denied">This app requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'SensorLogger\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
</resources>