<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_logger">

    <fragment
        android:id="@+id/navigation_logger"
        android:name="id.ac.ugm.fahris.sensorlogger.ui.logger.LoggerFragment"
        android:label="@string/title_logger"
        tools:layout="@layout/fragment_logger" />

    <fragment
        android:id="@+id/navigation_recordings"
        android:name="id.ac.ugm.fahris.sensorlogger.ui.recordings.RecordingsFragment"
        android:label="@string/title_recordings"
        tools:layout="@layout/fragment_recordings" />

    <fragment
        android:id="@+id/navigation_about"
        android:name="id.ac.ugm.fahris.sensorlogger.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_about" />
</navigation>